--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -12,7 +12,7 @@ post {
         &.one {
             img {
                 width: 100%;
-                max-height:450px;
+                max-height: 450px;
                 object-fit: cover;
             }
         }
@@ -21,13 +21,13 @@ post {
             //height: calc(70vw);
             img:nth-child(1) {
                 position: absolute;
-                width: calc(50vw - 4px); 
+                width: calc(50vw - 4px);
                 object-fit: cover;
                 left: 0px;
             }
             img:nth-child(2) {
                 position: absolute;
-                width: calc(50vw - 4px); 
+                width: calc(50vw - 4px);
                 object-fit: cover;
                 right: 0px;
             }
@@ -39,14 +39,14 @@ post {
             img:nth-child(1) {
                 position: absolute;
                 width: calc(100vw - 32px);
-               // height: calc(50vw);
+                // height: calc(50vw);
                 object-fit: cover;
                 left: 0px;
             }
             img:nth-child(2) {
                 position: absolute;
                 width: calc(50vw - 21px);
-               // height: calc(50vw - 11px);
+                // height: calc(50vw - 11px);
                 object-fit: cover;
                 left: 0px;
                 bottom: 0px;
@@ -54,7 +54,7 @@ post {
             img:nth-child(3) {
                 position: absolute;
                 width: calc(50vw - 21px);
-             //   height: calc(50vw - 11px);
+                //   height: calc(50vw - 11px);
                 right: 0px;
                 object-fit: cover;
                 bottom: 0px;
@@ -67,8 +67,8 @@ post {
             img:nth-child(7) {
                 display: none !important;
             }
-        }     
-        .moreimg {      
+        }
+        .moreimg {
             position: absolute;
             width: 49%;
             height: calc(50vw - 11px);
@@ -87,108 +87,123 @@ post {
         }
     }
 
-        .three .set-all{
-            width: calc(50vw - 21px);
-            height: calc(50vw - 11px);
-            object-fit: cover;
-        }    
-        .three .set-all:first-of-type {
-            width: calc(100vw - 32px);
-            height: calc(50vw);
-            height:200px;
-            object-fit: cover;      
-        } 
-    .invisible {
-        display: none;
-    }
-    
-    .three .set-all{
+    .three .set-all {
         width: calc(50vw - 21px);
         height: calc(50vw - 11px);
         object-fit: cover;
-    }    
+    }
+    .three .set-all:first-of-type {
+        width: calc(100vw - 32px);
+        height: calc(50vw);
+        height: 200px;
+        object-fit: cover;
+    }
+    .invisible {
+        display: none;
+    }
+
+    .three .set-all {
+        width: calc(50vw - 21px);
+        height: calc(50vw - 11px);
+        object-fit: cover;
+    }
     .three .set-all:first-of-type {
         width: calc(100vw - 24px);
         // height: calc(50vw);
-        height:200px;
-        object-fit: cover;      
-    } 
-    .three .set-all:first-of-type img, .three .set-all:first-of-type video{
-        height:calc(100% - 6px);
-        width:100%;
+        height: 200px;
+        object-fit: cover;
     }
-    .three .set-all{        
+    .three .set-all:first-of-type img,
+    .three .set-all:first-of-type video {
+        height: calc(100% - 6px);
+        width: 100%;
+    }
+    .three .set-all {
         width: calc(50vw - 15px);
         height: calc(50vw - 11px);
         object-fit: cover;
         float: left;
-        position:relative;
+        position: relative;
     }
-    .three .set-all:last-of-type{        
-            float:right
+    .three .set-all:last-of-type {
+        float: right;
     }
-    .three .set-all img, .three .set-all video{
-        width:100%;
-        height:150px;
+    .three .set-all img,
+    .three .set-all video {
+        width: 100%;
+        height: 150px;
     }
     .two {
         height: 150px;
     }
-    .two .set-all{        
+    .two .set-all {
         width: calc(50vw - 15px);
-        height:100%;
+        height: 100%;
         object-fit: cover;
         float: left;
-        position:relative;
+        position: relative;
     }
-    .two .set-all:first-of-type{
+    .two .set-all:first-of-type {
         // margin-right: 1%;
     }
-    .two .set-all:last-of-type{
-       float: right;
+    .two .set-all:last-of-type {
+        float: right;
     }
-    .two .set-all img, .two .set-all video{
-        width:100%; 
-        height:150px;
+    .two .set-all img,
+    .two .set-all video {
+        width: 100%;
+        height: 150px;
     }
     .four {
         height: 150px;
     }
-    .four .set-all{        
+    .four .set-all {
         width: 49%;
-        height:150px;
+        height: 150px;
         object-fit: cover;
         float: left;
-        position:relative;
+        position: relative;
         margin-bottom: 10px;
     }
-    .four .set-all:nth-child(3){
+    .four .set-all:nth-child(3) {
         margin-right: 1%;
     }
-    .four .set-all:nth-child(4){
-        margin-left: 1%;        
-    }
-    .four .set-all:nth-child(1){
-        margin-right: 1%;
-    }
-    .four .set-all:nth-child(2){
+    .four .set-all:nth-child(4) {
         margin-left: 1%;
     }
-    .four .set-all img, .four .set-all video{
-        width:100%; 
-        height:150px;               
+    .four .set-all:nth-child(1) {
+        margin-right: 1%;
     }
-    .imagescontainer .moreimg{
-        height:150px;
+    .four .set-all:nth-child(2) {
+        margin-left: 1%;
+    }
+    .four .set-all img,
+    .four .set-all video {
+        width: 100%;
+        height: 150px;
+    }
+    .imagescontainer .moreimg {
+        height: 150px;
         top: 160px;
     }
-    .one video, .one img{
+    .one video,
+    .one img {
         width: 100%;
     }
 
-    .imagescontainer{
-        video{
-            background-color:black !important;
+    .imagescontainer {
+        video {
+            background-color: black !important;
         }
+    }
+    .swiper-slide img {
+        height: 200px;
+        width: 100%;
+        object-fit: cover;
+    }
+    .swiper-slide video {
+        height: 200px;
+        width: 100%;
+        object-fit: cover;
     }
 }
